# DEF-W9-12_DRFF-R2

./: ASSETS.md  NEXT_STEPS.md  PRD.md  README.md  anima_module.yaml  pyproject.toml
benchmarks/: README.md
configs/: debug.toml  default.toml  paper.toml
docs/: production_runbook.md
papers/: 2603.00106.txt
prds/: PRD-01-foundation.md  PRD-02-data-contract.md  PRD-03-features.md  PRD-04-training-eval.md  PRD-05-cuda-handoff.md  README.md
repositories/: README.md
src/anima_drff_r2/: __init__.py  benchmarks.py  cli.py  config.py  data.py  features.py  model.py  pipeline.py  reference.py
src/anima_drff_r2/backends/: __init__.py  cuda.py  mlx.py
tasks/: PRD-0101.md  PRD-0201.md  PRD-0202.md  PRD-0301.md  PRD-0302.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0501.md  PRD-0502.md  README.md
tests/: test_cli.py  test_data.py  test_features.py
